# discordbot

./: .gitignore  README.md  backup_db.sh  bot.py  deploy_server.sh  deploy_vm.sh  invictus_trigger_patterns.txt  ops.sh  post_pull_server.sh  pyproject.toml  pytest.ini  questions.json  requirements-dev.txt  requirements.txt  restore_db.sh  state.json
.github/workflows/: ci.yml
courtbot/: __init__.py  config.py  storage_sql.py
tests/: test_bot_utils.py
tsbot/: MIGRATION_STATUS.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tsbot/src/: config.ts  constants.ts  index.ts  logging.ts  parity.ts  runtime.ts  time.ts  types.ts
tsbot/src/discord/: bot.ts  commands.ts  runtime-parity.ts
tsbot/src/storage/: db.ts  schema.ts
tsbot/tests/: backfill-regression.test.ts  command-channel-options.test.ts  commands-parity.test.ts  config.test.ts  parity.test.ts  runtime-parity-autoposter.test.ts
