[project]
name = "imperial-court-bot"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
no_implicit_optional = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["bot"]
ignore_errors = true
